tests/data/placebo/test_efs_mount_secgroup/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [],
            "UserIdGroupPairs": [
              {
                "UserId": "117134021140",
                "GroupId": "sg-ccf3a8a4"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-e9678981",
        "OwnerId": "117134021140",
        "GroupId": "sg-ccf3a8a4"
      }
    ],
    "ResponseMetadata": {}
  }
}
