tests/data/placebo/test_efs_mount_secgroup/elasticfilesystem.DescribeMountTargetSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      "sg-ccf3a8a4"
    ],
    "ResponseMetadata": {}
  }
}
